--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -100,7 +100,7 @@ body, h1, h2, h3, h4, h5, h6 {
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
-  background: url(../img/banner-bg.jpg) no-repeat center center;
+  background: url(../img/bannermoda.jpg) no-repeat center center;
   background-size: cover;
 }
 
@@ -108,15 +108,17 @@ body, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
   font-size: 3em;
+  
 }
 
 .banner ul {
   margin-bottom: 0;
+
 }
 
 .banner-social-buttons {
-  float: right;
-  margin-top: 0;
+  margin-top: 140px;
+    
 }
 
 @media(max-width:1199px) {
