--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 #texto{
     text-align: justify;
 }
@@ -15,4 +20,19 @@
     color: coral;
     text-align: left;
 }
-.
+
+#imagenes{
+    display: inline-block;
+    padding: 20px;
+    margin: 20px;
+}
+#complementos{
+   display: inline-block;
+    padding: 20px;
+    margin: 20px; 
+}
+.texto{
+    text-align: justify;
+    font-size: 20px;
+    padding: 30px;
+}
